# bootcamp

./: .gitignore  Metadata.md  README.md  apicmd.md  daily_log  description.md  functions.md  listfiles.md  mind_map  system_architecture  tag.md  updatefile.md
DAY 0/: .gitignore  Functions.md  README.md  bootcamp.cast  docker.cast  index.html
DAY 0/pranavi_hello/: README.md  main.py
DAY 1/: README.md  block_diagram  markdown_cheatsheet  sequence_diagram
DAY 1/DAY 0/pranavi_hello/: README.md  pyproject.toml
DAY 1/my-docs/: mkdocs.yml
basics/: README.md  fig.py  main.py
basics/ex-basics-2/: pyproject.toml
basics/ex-basics-2/pranavi_hello/: __init__.py
basics/ex-basics-3/: pyproject.toml
dataflow_framework/abstraction_level_0/: Readme.md  test.txt
dataflow_framework/abstraction_level_1/: Readme.md  documentation.md  process.py
dataflow_framework/abstraction_level_2/: cli.py  documentation.md  pipeline.py
dataflow_framework/abstraction_level_3/: READme.md  cli.py  core.py  documentation.md  main.py  out.txt  pipeline.py  pipeline.yaml
dataflow_framework/abstraction_level_4/: READme.md  cli.py  input.txt  pipeline.py  pipeline.yaml  types.py
dataflow_framework/abstraction_level_5/: documentation.md  out.txt
figure_captions_extraction/: README.md
figure_captions_extraction-Copy/: .gitignore  README.md
language_drills/: Readme.md  Readme.txt
language_drills/section 7/task 5/: pyproject.toml
language_drills/section 7/task 5/mypkg.egg-info/: SOURCES.txt
mysite/: .env.bak  Dockerfile  requirements.txt
persistence_drills/: ACID.txt
(+464 files in other folders)
