[build-system]
requires = ["setuptools>=42", "wheel", "typer[all]"]
build-backend = "setuptools.build_meta"

[project]
name = "pranavi-hello"
version = "0.1.0"
description = "A simple hello world package with CLI using Typer"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{name = "Pranavi"}]
dependencies = ["typer[all]>=0.9.0"]

[project.scripts]
pranavi-hello = "pranavi_hello.__main__:app"
