[project]
name = "mypkg"
version = "0.1.1"
description = "A minimal Python package"
authors = [
    { name = "Pranavi", email = "pranavik@gmsil.com"}
]
[project.scripts]
mytool = "mypkg.cli:main"

[tool.setuptools.package_data]
mypkg = ["data/*.json", "config/*.yaml"]


[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
